--- a/package.json
+++ b/package.json
@@ -11,9 +11,20 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/joy": "^5.0.0-beta.36",
+    "@mui/material": "^5.15.17",
     "aws-amplify": "^6.2.0",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
+    "vocode": "^1.0.37"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
