--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.17",
-    "aws-amplify": "^6.2.0",
+    "aws-amplify": "^6.3.0",
+    "aws-sdk": "^2.1618.0",
     "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
