--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.17",
+    "@stripe/stripe-js": "^3.4.0",
     "aws-amplify": "^6.3.0",
     "aws-sdk": "^2.1618.0",
     "buffer": "^6.0.3",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "stripe": "^15.6.0",
     "vocode": "^1.0.37"
   },
   "devDependencies": {
