--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/UserManagement/getUserData.js"]
+  "include": ["src", "src/UserManagement/getUserData.tsx"]
 }
